# woofi-python-sdk

./: CONTRIBUTING.md  README.md  pyproject.toml
src/woofi/: __init__.py  client.py  constants.py  exceptions.py
src/woofi/api/: source_stats_api.py  staking_api.py  stats_api.py  yield_api.py
src/woofi/schemas/: source_stats.py  staking.py  stats.py  yield_schema.py
src/woofi/services/: staking_service.py  stats_service.py  yield_service.py
src/woofi/utils/: decimals.py  time.py
tests/: test_client.py  test_utils.py
tests/test_services/: test_staking_service.py  test_stats_service.py  test_yield_service.py
