[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woofi"
version = "0.1.0"
description = "Python SDK for WOOFi DEX protocol"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["woofi", "defi", "dex", "sdk", "api"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/woonetwork/woofi-python-sdk"
Repository = "https://github.com/woonetwork/woofi-python-sdk"
Issues = "https://github.com/woonetwork/woofi-python-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/woofi"]

[tool.hatch.build.targets.sdist]
include = [
    "src/woofi",
    "tests",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
